--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,11 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+  <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
+  <!-- Add the standard Performance Monitoring library -->
+  <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-performance.js"></script>
   <div id="root"></div>
   <!--
       This HTML file is a template.
