--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+  <!-- socket io -->
+  <script src="/socket.io/socket.io.js"></script>
+
   <title>Take Five</title>
 </head>
 
